objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>AW_DefaultLeadProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Convert</fullName>
        </values>
        <values>
            <fullName>Defer</fullName>
        </values>
        <values>
            <fullName>Hold Engagement</fullName>
        </values>
        <values>
            <fullName>Initiate 1st Contact</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Schedule Engagement</fullName>
        </values>
        <values>
            <fullName>Unsuccessful</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Lead Process</fullName>
        <description>Consumer lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing - Contacted</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AW_AdviserUACFID__c</fullName>
        <description>UACFID of Adviser</description>
        <formula>UPPER(Owner:User.AW_UACFID__c)</formula>
        <label>Adviser UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Adviser_Branch__c</fullName>
        <description>Used for Achievement Dashboard - Lead Branch groupings.</description>
        <formula>Owner:User.AW_Branch__c</formula>
        <label>Adviser Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Adviser_Region__c</fullName>
        <description>Used for Achievement Dashboard for Groupings by Region.</description>
        <formula>Owner:User.AW_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adviser Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Age__c</fullName>
        <description>This is the age of the lead.</description>
        <formula>IF( NOT( ISBLANK( AW_DateOfBirth__c ) ) ,
  IF( DATE( 2000 , MONTH( AW_DateOfBirth__c ) , DAY( AW_DateOfBirth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( AW_DateOfBirth__c ),
     YEAR (Today()) - YEAR ( AW_DateOfBirth__c ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Bulk_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preset to unchecked/false. It is set to a true/checked on a bulk lead  load script.</description>
        <label>Bulk Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_BusinessOwnership__c</fullName>
        <description>Please select business ownership</description>
        <label>Business Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AW_BusinessType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>AW_BusinessOwnership</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_BusinessType__c</fullName>
        <description>Please select business type</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_BusinessType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_BypassDuplicateRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in duplicate rule criteria. Set the filed to true to bypass duplicate check.</description>
        <label>Bypass Duplicate Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_CampaignId__c</fullName>
        <description>Related Campaign ID</description>
        <label>Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ClosedReason__c</fullName>
        <description>Please select closing reason</description>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed - Gapgal</fullName>
                </value>
                <value>
                    <fullName>Completed -  Reg28</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Pend for Leads</fullName>
                </value>
                <value>
                    <fullName>Pend - Reg28</fullName>
                </value>
                <value>
                    <fullName>Reroute</fullName>
                </value>
                <value>
                    <fullName>Send to Complex Queries</fullName>
                </value>
                <value>
                    <fullName>Send to Requirements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_CommentsNotes__c</fullName>
        <description>Any additional information about the lead.</description>
        <label>Comments/Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AW_Comments__c</fullName>
        <description>Stores the comments received from the client.</description>
        <label>Client Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AW_CompanyRegistrationTrustNumber__c</fullName>
        <description>Company Registration or Trust Number of the Business Client</description>
        <label>Company Registration/Trust Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Created_by_Me__c</fullName>
        <description>Returns Yes if the Current User is the creator of the record, else returns No</description>
        <formula>IF( CreatedBy.Id = $User.Id , &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Me</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Changed__c</fullName>
        <description>Field to store the numbers of years since the address1 was last changed.</description>
        <label>Credit Bureau Address 1 Changed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1City__c</fullName>
        <description>Stores address 1 city as received from the Transunion response for this lead.</description>
        <label>Credit Bureau Address 1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Line1__c</fullName>
        <description>Stores the  line 1 of address 1 as received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 1 Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Line2__c</fullName>
        <description>Stores line 1 of address 1 as received from Transunion response for the lead.</description>
        <label>Credit Bureau Address 1 Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1OwnerTenant__c</fullName>
        <description>Field to store if the Lead is owner or tenant at the provided address 1.</description>
        <label>Credit Bureau Address 1 Owner/Tenant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1PostalCode__c</fullName>
        <description>This field is used to store the postal code for address 1 as received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1ProvinceCode__c</fullName>
        <description>This field is used to store the province code for address 1 received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 1 Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Province__c</fullName>
        <description>This field is used to store the province for address 1 as received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 1 Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Suburb__c</fullName>
        <description>This field is used to store the suburb for address 1 as received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 1 Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Changed__c</fullName>
        <description>This field is used to store if the address 2 was changed or not.</description>
        <label>Credit Bureau Address 2 Changed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2City__c</fullName>
        <description>This field is used to store the city for address 2 as received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Line1__c</fullName>
        <description>This field is used to store the line 1 for second address received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 2 Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2OwnerTenant__c</fullName>
        <description>This field is used to store information if the lead is owner or tenant at address 2.</description>
        <label>Credit Bureau Address 2 Owner/Tenant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2PostalCode__c</fullName>
        <description>This field is used to store the postal code for second address received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2ProvinceCode__c</fullName>
        <description>This field is used to store the province code for address 2 received in Transunion response for this lead.</description>
        <label>Credit Bureau Address 2 Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Province__c</fullName>
        <description>This field is used to store the province for address 2 received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 2 Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Suburb__c</fullName>
        <description>This field is used to store the suburb for address 2 received from Transunion response for this lead.</description>
        <label>Credit Bureau Address 2 Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAlternativeEmail__c</fullName>
        <description>Used to store alternative email received from Transunion response for this lead.</description>
        <label>Credit Bureau Alternative Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCallStatus__c</fullName>
        <description>Stores the last Transunion API call status.</description>
        <label>Credit Bureau Requested Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCellNumber__c</fullName>
        <description>This field is used to store the cell number received from Transunion response for the lead.</description>
        <label>Credit Bureau Cell Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauConsent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to record lead&apos;s consent for storing data from Transunion.</description>
        <label>Credit Bureau Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCreditScoreIndicator__c</fullName>
        <description>This field is used to display the credit score rating for the lead as per the credit score received in the Transunion response.</description>
        <formula>IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Poor.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Poor.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Poor.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Unfavourable.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Unfavourable.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Unfavourable.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_BelowAverage.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_BelowAverage.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_BelowAverage.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Average.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Average.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Average.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Favourable.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Favourable.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Favourable.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Good.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Good.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Good.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Excellent.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Excellent.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Excellent.MasterLabel, &quot;&quot;)
))))))</formula>
        <label>Credit Bureau Credit Score Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCreditScore__c</fullName>
        <description>This field is used to store the credit score as received from the Transunion response.</description>
        <label>Credit Bureau Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauDeceasedDate__c</fullName>
        <description>Used to store deceased date received in Transunion response.</description>
        <label>Credit Bureau Deceased Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauDependants__c</fullName>
        <description>Used to store the number of dependents as received in the Transunion response.</description>
        <label>Credit Bureau Dependants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauEmployer1__c</fullName>
        <description>Used to store employer 1 for this lead as received in Transunion response.</description>
        <label>Credit Bureau Employer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauEmployer2__c</fullName>
        <description>Used to store employer 2 for this account as received in Transunion response.</description>
        <label>Credit Bureau Employer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauEstimatedNetIncome__c</fullName>
        <description>This field will be used to store the estimated net income coming from Transunion response for the lead.</description>
        <label>Credit Bureau Estimated Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauForename1__c</fullName>
        <description>Used to store forename 1 as received in the Transunion response.</description>
        <label>Credit Bureau Forename 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauForename2__c</fullName>
        <description>Used to store forename 2 as received in the Transunion response.</description>
        <label>Credit Bureau Forename 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauForename3__c</fullName>
        <description>Used to store forename 3 as received in the Transunion response.</description>
        <label>Credit Bureau Forename 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauGender__c</fullName>
        <description>Used to store gender as received in the Transunion response.</description>
        <label>Credit Bureau Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauIncomeSegment__c</fullName>
        <description>Used to display the income segment of the lead based on the estimated net income received in the Transunion response.</description>
        <formula>IF(AW_CreditBureauEstimatedNetIncome__c &lt; 0, &quot;&quot;, 
			IF(AW_CreditBureauEstimatedNetIncome__c  &lt;= $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.AW_Threshold__c , &quot;(0-&quot; &amp;  TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.AW_Threshold__c / 1000)  &amp; &quot;k) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.MasterLabel, 
		   IF(AW_CreditBureauEstimatedNetIncome__c &lt;= $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.AW_Threshold__c, &quot;(&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.AW_Threshold__c / 1000) &amp; &quot;k-&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.AW_Threshold__c / 1000) &amp; &quot;k) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.MasterLabel,   
					  IF(AW_CreditBureauEstimatedNetIncome__c &lt;=  $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c , &quot;(&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.AW_Threshold__c / 1000) &amp; &quot;k-&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c / 1000) &amp; &quot;k) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.MasterLabel,  
									IF(AW_CreditBureauEstimatedNetIncome__c &gt; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c, &quot;(&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c / 1000) &amp; &quot;k+) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_HighNetWorth.MasterLabel, &quot;&quot;)  ) ) ) )</formula>
        <label>Credit Bureau Income Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauLastCallDateTime__c</fullName>
        <description>Stores the last Transunion API call datetime</description>
        <label>Credit Bureau Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauMaritalStatus__c</fullName>
        <description>Used to store the marital status as per the response received from Transunion.</description>
        <label>Credit Bureau Marital Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauOccupation1__c</fullName>
        <description>Used to store occupation 1 received in Transunion response.</description>
        <label>Credit Bureau Occupation 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauOccupation2__c</fullName>
        <description>Used to store occupation 2 received in Transunion response.</description>
        <label>Credit Bureau Occupation 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauPeriodAtAddress1__c</fullName>
        <description>Field to store the years since lead has been living at address 1.</description>
        <label>Credit Bureau Period At Address 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauPeriodAtAddress2__c</fullName>
        <description>Field to store the years since lead has been living at address 2.</description>
        <label>Credit Bureau Period At Address 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauRequestStatusMessage__c</fullName>
        <description>This field shows the request status of Transunion call.</description>
        <label>Credit Bureau Request Status Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSpouseName1__c</fullName>
        <description>Used to store spouse name 1 received in Transunion response.</description>
        <label>Credit Bureau Spouse Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSpouseName2__c</fullName>
        <description>Used to store spouse name 2 received in Transunion response.</description>
        <label>Credit Bureau Spouse Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSupplier10__c</fullName>
        <description>Used to store supplier 10 received in Transunion response.</description>
        <label>Credit Bureau Supplier 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSupplier11__c</fullName>
        <description>Used to store supplier 11 received in Transunion response.</description>
        <label>Credit Bureau Supplier 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSupplier12__c</fullName>
        <description>Used to store supplier 12 received in Transunion response.</description>
        <label>Credit Bureau Supplier 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSurname__c</fullName>
        <description>Used to store surname received in Transunion response.</description>
        <label>Credit Bureau Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTelephoneNumber__c</fullName>
        <description>Used to store telephone number received in Transunion response.</description>
        <label>Credit Bureau Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTenure1__c</fullName>
        <description>Used to store tenure in occupation 1 as received in Transunion response.</description>
        <label>Credit Bureau Tenure 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTenure2__c</fullName>
        <description>Used to store tenure in occupation 2 as received in Transunion response.</description>
        <label>Credit Bureau Tenure 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTitle__c</fullName>
        <description>Used to store title received in Transunion response.</description>
        <label>Credit Bureau Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CustomerInterest__c</fullName>
        <description>Stores details about where on the source the lead was created from.</description>
        <label>Customer Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_DateOfBirth__c</fullName>
        <description>This is the date of birth for the lead.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_DateReceived__c</fullName>
        <description>Date at which lead was sent to the adviser</description>
        <label>Lead Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Gender__c</fullName>
        <description>This field holds the gender which is male or female of the lead.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_HomeNumber__c</fullName>
        <description>This is the contact details (home number) of the lead.</description>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AW_HoursInCurrentStatus__c</fullName>
        <description>Used to calculate the number of business hours which have elapsed since the lead status last changed.
Business Hours: 8:00 - 17:00</description>
        <formula>ROUND(9 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 06:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( AW_LastStatusChange__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( AW_LastStatusChange__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( AW_LastStatusChange__c - DATETIMEVALUE( &apos;1900-01-08 06:00:00&apos; ), 1) ) )
    )
   ) 
  ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours in Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_IdentificationNumber__c</fullName>
        <description>This is the Identification number for the Client (Passport or RSA ID)</description>
        <inlineHelpText>The Gender and Date of Birth will be derived from a valid South African Identification Number entered.</inlineHelpText>
        <label>Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_IdentificationType__c</fullName>
        <description>This is the type of identification which is either Identifcation number or passport.</description>
        <label>Identification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_IdentificationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_IdleStatusIndicator__c</fullName>
        <description>Displays a positive, neutral or negative indicator based on the time elapsed since the lead moved to the current status.</description>
        <formula>IF(IsConverted , 
	&quot;Converted&quot;,
	IF
	( 
		AW_HoursInCurrentStatus__c &lt;= AW_LeadStatusPositiveSetting__c, 
		IMAGE(&quot;/resource/1560429216000/Idle_Indicator_Positive&quot;, &quot;positive&quot;, 15, 30),
		IF
		( 
			AW_HoursInCurrentStatus__c &gt;=  AW_LeadStatusNegativeSetting__c,
			IMAGE(&quot;/resource/1560429428000/Idle_Indicator_Negative&quot;, &quot;negative&quot;, 15, 30),
			IMAGE(&quot;/resource/1560429307000/Idle_Indicator_Neutral&quot;, &quot;neutral&quot;, 15, 30)
        
		)
	)
	&amp; &quot; &quot; &amp; TEXT(AW_HoursInCurrentStatus__c) &amp; &quot;h elapsed&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Idle Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Income__c</fullName>
        <description>How much the leads earns (Salary).</description>
        <label>Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_IsReallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is to check whether lead is already reallocated or not.</description>
        <label>Is Reallocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_LastEngagement__c</fullName>
        <description>Last Engagement with Liberty</description>
        <label>Last Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_LastStatusChange__c</fullName>
        <description>The date that the last status was changed.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LeadAccountName__c</fullName>
        <description>Denotes lead account name</description>
        <inlineHelpText>Please capture Lead account name</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadAllocationStatusTimeAssigned__c</fullName>
        <description>Captures the time when the Lead Allocation Status gets changed to &apos;Assigned&apos;</description>
        <label>Lead Allocation Status Time - Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LeadAllocationStatusTimeTouched__c</fullName>
        <description>Captures the time when the Lead Allocation Status gets changed to &apos;Touched&apos;</description>
        <label>Lead Allocation Status Time - Touched</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LeadAllocationStatus__c</fullName>
        <label>Lead Allocation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Touched</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_LeadBranch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store the nearest branch associated with lead</description>
        <label>Lead Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Lead Branch)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_LeadCompleteness__c</fullName>
        <description>The completeness score is calculated based on the information available in certain fields and their weightings. If field is blank then consider 0 weightage and 1 otherwise. 

Numerator:  Sum of weightage of all the fields, 0 if blank
Denominator : Total Weightage for the fields</description>
        <formula>(if(AND(ISBLANK(FirstName),ISBLANK(FirstName)),0,1)+ 
if(ISBLANK(Phone),0,1)+ 
if(ISBLANK(Email),0,1)+ 
if(ISBLANK(AW_DateOfBirth__c),0,1)+ 
if(ISBLANK(AW_Income__c),0,1)+ 
if(ISBLANK(AW_Occupation__c),0,1)+ 
if(ISBLANK(AW_LastEngagement__c),0,1)+ 
if(ISBLANK(TEXT(AW_ProductInterest__c)),0,1)+ 
if(ISBLANK(AW_ValueOfExistingProduct__c),0,1)+ 
if(ISBLANK(AW_DateReceived__c),0,1))/(1+1+1+1+1+1+1+1+1+1)</formula>
        <label>Lead Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>